--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,8 @@ mime = "0.3"
 mime_guess = "2"
 percent-encoding = "2"
 time = { version = "0.3.7", features = ["parsing", "formatting", "macros"] }
-tokio = { version = "1.20", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
+# Range because of vulnerability https://rustsec.org/advisories/RUSTSEC-2023-0001.html
+tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
 
 # HTTPS
 rustls = { version = "0.20", optional = true }
