--- a/async/Cargo.toml
+++ b/async/Cargo.toml
@@ -16,4 +16,4 @@ categories = ["web-programming", "asynchronous"]
 bytes = "1"
 http = "0.2"
 kvarn_utils = { path = "../utils", version = "0.5" }
-tokio = { version = "1.20", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
+tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
