--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["template-engine"]
 futures-util = "0.3"
 kvarn = { path = "../", default-features = false, version = "0.5" }
 kvarn-fastcgi-client = { version = "0.1", optional = true }
-tokio = { version = "1.20", features = ["fs"] }
+tokio = { version = "1, >=1.23.1", features = ["fs"] }
 url-crawl = { version = "0.1", optional = true }
 async_chunked_transfer = "1.4"
 percent-encoding = { version = "2", optional = true }
@@ -30,7 +30,7 @@ push = ["url-crawl"]
 reverse-proxy = ["connection"]
 
 [dev-dependencies]
-tokio = { version = "1.20", features = ["net", "io-util", "macros"] }
+tokio = { version = "1, >=1.23.1", features = ["net", "io-util", "macros"] }
 kvarn_testing = { path = "../testing", version = "0.5" }
 
 [package.metadata.docs.rs]
