--- a/signal/Cargo.toml
+++ b/signal/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["ipc", "kvarn"]
 
 [dependencies]
 log = "0.4"
-tokio = { version = "1.20", features = ["net", "time", "io-util", "rt", "fs", "sync", "macros"] }
+tokio = { version = "1, >=1.23.1", features = ["net", "time", "io-util", "rt", "fs", "sync", "macros"] }
 notify = { version = "5", default-features = false, features = ["macos_fsevent"] }
 
 [package.metadata.docs.rs]
