--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -16,5 +16,5 @@ kvarn = { path = "../", features = ["full"], version = "0.5.0" }
 reqwest = "0.11"
 rand = "0.8"
 rcgen = "0.10"
-tokio = { version = "1.20", features = ["macros"] }
+tokio = { version = "1, >=1.23.1", features = ["macros"] }
 rustls = "0.20"
